force-app/main/default/objects/Objetivo_De_venta__c/Objetivo_De_venta__c.object-meta.xml
<CustomObject>
    <description>Objetivos de venta de unidades</description>
    <label>Objetivo De Venta</label>
    <nameField>
        <label>Nombre de Objetivo De venta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objetivos De Venta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>