force-app/main/default/objects/Objetivo_De_venta__c/fields/Comercializadora__c.field-meta.xml
<CustomField>
    <fullName>Comercializadora__c</fullName>
    <label>Comercializadora</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Comercializadora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Objetivos De Venta</relationshipLabel>
    <relationshipName>Objetivos_De_Venta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>