force-app/main/default/objects/Objetivo_De_venta__c/fields/Cumplimento__c.field-meta.xml
<CustomField>
    <fullName>Cumplimento__c</fullName>
    <formula>Ventas_totales__c / Meta_en_dolares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumplimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>