force-app/main/default/objects/Objetivo_De_venta__c/fields/Meta_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Meta_en_dolares__c</fullName>
    <label>Meta en dolares</label>
    <summarizedField>Objetivo_del_mes__c.Meta_en_dolares__c</summarizedField>
    <summaryForeignKey>Objetivo_del_mes__c.Objetivo_De_Venta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>