force-app/main/default/objects/Objetivo_De_venta__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Objetivos De Venta</relationshipLabel>
    <relationshipName>Objetivos_De_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>