force-app/main/default/objects/Objetivo_De_venta__c/fields/Ventas_totales__c.field-meta.xml
<CustomField>
    <fullName>Ventas_totales__c</fullName>
    <inlineHelpText>Ventas totales en el historial del comercial.</inlineHelpText>
    <label>Ventas totales</label>
    <summarizedField>Objetivo_del_mes__c.Monto_actual_vendido__c</summarizedField>
    <summaryForeignKey>Objetivo_del_mes__c.Objetivo_De_Venta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>